--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://romeoostashko.github.io/pokedex",
   "name": "pokedex",
   "version": "0.1.0",
   "private": true,
@@ -8,18 +9,22 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "eslint-config-standard": "^16.0.2",
-    "mobx": "^6.0.4",
-    "mobx-react": "^7.0.5",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
-    "path": "^0.12.7"
+    "mobx": "^6.0.4",
+    "mobx-react": "^7.0.5",
+    "path": "^0.12.7",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "node server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -41,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
